# sedona-spatialbench

./: .editorconfig  .pre-commit-config.yaml  404.html  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  index.html  mkdocs.yml  objects.inv  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: benchmark.yml  build-py-packages.yml  packaging.yml  rust.yml  spatialbench-cli-publish-pypi.yml  spatialbench-publish-crates.yml
benchmark/: requirements-milvus.txt  run_benchmark.py
contributors-guide/: index.html
datasets-generators/: index.html
dev/release/: README.md  rat_exclude_files.txt  run-rat.sh  verify-release-candidate.sh
docs/: contributors-guide.md  datasets-generators.md  index.md  queries.ipynb  queries.md  quickstart.md  requirements.txt  single-node-benchmarks.md  spatialbench-distributions.md
javascripts/: katex.js
overview-methodology/: index.html
queries/: index.html
quickstart/: index.html
raster/: generator.py
search/: search_index.json
single-node-benchmarks/: index.html
spatialbench/: Cargo.toml
spatialbench-arrow/: Cargo.toml  README.md
spatialbench-arrow/src/: lib.rs
spatialbench-arrow/tests/: reparse.rs
spatialbench-cli/: Cargo.toml  pyproject.toml
spatialbench-cli/src/: csv.rs  main.rs  output_plan.rs  plan.rs  tbl.rs  zone_df.rs
spatialbench-cli/src/zone/: config.rs  datasource.rs  main.rs  mod.rs  partition.rs  stats.rs  writer.rs
spatialbench-cli/tests/: cli_integration.rs
spatialbench-distributions/: index.html
spatialbench-queries/: milvus_data_loader.py  milvus_queries.py  spatial_polars.py
spatialbench/data/: README.md
spatialbench/data/sf-v1/: zone.parquet
spatialbench/src/: csv.rs  distribution.rs  dists.dss  generators.rs  lib.rs  random.rs  text.rs
spatialbench/src/q_and_a/: answers_sf1.rs
spatialbench/tests/: integration_tests.rs
stylesheets/: extra.css
