[package]
name = "spatialbench-cli"
version = "1.1.1"
authors = { workspace = true }
description = "Blazing fast pure Rust SpatialBench data generator command line tool."
readme = "README.md"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
arrow = "56"
parquet = "56"
clap = { version = "4.5.32", features = ["derive"] }
spatialbench = { path = "../spatialbench", version = "1.1.1"}
spatialbench-arrow = { path = "../spatialbench-arrow", version = "1.1.1" }
tokio = { version = "1.44.1", features = ["full"]}
futures = "0.3.31"
num_cpus = "1.0"
log = "0.4.26"
env_logger = "0.11.7"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.99"
serde_yaml = "0.9.33"
datafusion = "50.2"
object_store = { version = "0.12.4", features = ["http"] }
arrow-array = "56"
arrow-schema = "56"
url = "2.5.7"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.20.0"
flate2 = "1.1.0"
